# math-sonify

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build_release.bat  config.toml  patch_audio.py  patch_bitcrusher.py  patch_main.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: arpeggiator.rs  arrangement.rs  audio.rs  audio_driven.rs  beat_tracker.rs  blend.rs  cellular_automaton.rs  chord_analyzer.rs  chord_progression.rs  chord_voicing.rs  collaboration.rs  composer.rs  config.rs  envelope_generator.rs  error.rs  euclidean.rs  generative_counterpoint.rs  main.rs  midi_export.rs  midi_sequencer.rs  musical_analysis.rs  network.rs  osc.rs  patches.rs  phase_portrait.rs  plugin.rs  presets.rs  quantum_oscillator.rs  rhythm_engine.rs  rossler.rs  scale_mapper.rs  scene_format.rs  sequencer.rs  sonification_pipeline.rs  spatial_audio.rs  spectral_composition.rs  spectral_morph.rs  tests.rs  tests.rs.bak  tuning.rs  (+7 more)
src/networks/: coupled_oscillators.rs  mod.rs
src/shaders/: phase_portrait.wgsl
src/sonification/: direct.rs  fm.rs  granular.rs  mod.rs  orbital.rs  spectral.rs  vocal.rs  waveguide_mapper.rs
src/synth/: bitcrusher.rs  chorus.rs  delay.rs  envelope.rs  eq.rs  fdn_reverb.rs  filter.rs  grain.rs  karplus.rs  limiter.rs  mod.rs  oscillator.rs  resonator.rs  reverb.rs  waveguide.rs  waveshaper.rs
src/synthesis/: mod.rs  physical.rs
src/systems/: aizawa.rs  arnold_cat.rs  burke_shaw.rs  chen.rs  chua.rs  coupled_map_lattice.rs  custom_ode.rs  dadras.rs  delayed_map.rs  double_pendulum.rs  duffing.rs  finance.rs  fractional_lorenz.rs  genesio_tesi.rs  geodesic_torus.rs  halvorsen.rs  henon_map.rs  hindmarsh_rose.rs  kuramoto.rs  kuramoto_driven.rs  liu.rs  logistic_map.rs  lorenz.rs  lorenz84.rs  lorenz96.rs  mackey_glass.rs  mathieu.rs  mod.rs  nose_hoover.rs  oregonator.rs  rabinovich_fabrikant.rs  rossler.rs  rucklidge.rs  sprott_b.rs  sprott_c.rs  sprott_h.rs  sprott_l.rs  standard_map.rs  stochastic_lorenz.rs  thomas.rs  (+3 more)
tests/: integration.rs
